--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,11 +2,13 @@
   "dependencies": {
     "com.pixelrouge.parallaxersystemforunity": "https://github.com/PixelRubro/ParallaxerSystemForUnity.git",
     "com.unity.collab-proxy": "2.7.1",
+    "com.unity.connect.share": "4.2.3",
     "com.unity.feature.2d": "2.0.1",
     "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.13.0",
     "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.recorder": "5.1.2",
     "com.unity.render-pipelines.universal": "17.0.4",
     "com.unity.splines": "2.7.2",
     "com.unity.test-framework": "1.4.6",
