--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -4,7 +4,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"C:/Users/weger/Documents/GMD/Game Jam/CheeseJam_25/SayCheese_FinalFinalBuild_Webgl;;;;;;;;;\"}"
+                "value": "{\"m_Value\":\"D:/Saman/Hry/Life is hard/web build 03-11-2025;C:/Users/weger/Documents/GMD/Game Jam/CheeseJam_25/SayCheese_FinalFinalBuild_Webgl;;;;;;;;\"}"
             }
         ]
     }
